# motion-log-validator

./: .gitignore  README.md  pyproject.toml
src/models/: __init__.py  event_models.py  report_models.py  validation_models.py
src/motion_log_validator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/motion_validator/: engine.py  parser.py  patterns.py  reader.py
src/motion_validator/models/: log_models.py
src/motion_validator/validators/: base.py  duration.py  error_check.py  sequence.py  standby.py  target_reached.py
tests/: test_duration_validator.py  test_engine_end_to_end.py  test_error_validator.py  test_parser.py  test_reader.py  test_sequence_validator.py  test_standby_validator.py  test_target_reached_validator.py
